<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/navigation_all_tasks">

    <fragment
        android:id="@+id/navigation_all_tasks"
        android:name="uz.instat.tasklist.presentation.ui.alltodo.AllTaskFragment"
        android:label="@string/title_all"
        tools:layout="@layout/fragment_all_task" />

    <fragment
        android:id="@+id/navigation_in_progress_tasks"
        android:name="uz.instat.tasklist.presentation.ui.inprogress.InProgressFragment"
        android:label="@string/title_in_progress"
        tools:layout="@layout/fragment_in_progress_task" />

    <fragment
        android:id="@+id/navigation_performed_tasks"
        android:name="uz.instat.tasklist.presentation.ui.performed.PerformedFragment"
        android:label="@string/title_performed"
        tools:layout="@layout/fragment_performed_task" />

</navigation>